# rust-stellar-xdr

./: Cargo.toml  LICENSE  README.md  build.rs
src/: Stellar.rs  lib.rs  sep10.rs  tests.rs  util.rs
tests/: xdr.rs
xdr/: Stellar-SCP.x  Stellar-ledger-entries.x  Stellar-ledger.x  Stellar-overlay.x  Stellar-transaction.x  Stellar-types.x
