[package]
name = "rust-stellar-xdr"
version = "0.1.0"
authors = ["Thorhallur Sverrisson <thorhallur.sverrisson@rb.is>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.xdr-codec]
git = "https://github.com/jsgf/rust-xdr"

[dev-dependencies]
base64 = "*"
