[package]
name = "rust-stellar-xdr"
version = "0.3.0"
authors = ["Thorhallur Sverrisson <toti@toti.is>"]
edition = "2018"

description = "Generated rust code from Stellar XDR files"
homepage = "https://github.com/thorhs/rust-stellar-xdr"
repository = "https://github.com/thorhs/rust-stellar-xdr"
readme = "README.md"
keywords = [ "stellar", "lumens", "xdr" ]
categories = [ "encoding", "parsing", "api-bindings" ]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc16 = "0.4"
data-encoding = "2.1"
byteorder = "1.3"
sha2 = "0.8"
rust-crypto = "^0.2.36"
rand = "0.7"

[dependencies.xdr-codec]
#git = "https://github.com/jsgf/rust-xdr"
version = "^0.4.4"

[build-dependencies]
multi_reader = "0.1"
xdrgen = "^0.4.4"
